--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
 EXPRESS_SESSION_SECRET=secretsessionkey
-
 PORT = 4000
 MongoDBURI="mongodb+srv://admin:<db_password>@cluster0.mg1si.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-
-AdminName = 'Omkar Pawar'
-AdminPassword = 'omkar@Admin1'
+AdminName = 'Hemant'
+AdminPassword = '12345678'
